--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-	</properties>
+
+		<sonar.login>admin</sonar.login>
+                <sonar.password>op14092003</sonar.password>
+	</properties>00
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
