--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 		<sonar.login>admin</sonar.login>
                 <sonar.password>op14092003</sonar.password>
-	</properties>00
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
